--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,78 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
+
+@layer rest {
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  html {
+    font-size: 62.5%;
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+  }
+
+  [role="list"] {
+    list-style: none;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    text-wrap: balance;
+  }
+
+  p,
+  li {
+    text-wrap: pretty;
+  }
+
+  img,
+  picture {
+    max-inline-size: 100%;
+    display: block;
+  }
+
+  input,
+  button,
+  textarea,
+  select {
+    font: inherit;
+  }
+}
+
+@layer base {
+  :root {
+    --clr-white: #fff;
+    --clr-black: #000;
+
+    --clr-gray-50: #f6f8fd;
+    --clr-gray-100: #e4e9f2;
+    --clr-gray-300: #c3cad9;
+    --clr-gray-500: #69707d;
+    --clr-gray-900: #1d2026;
+
+    --clr-orange-300: #ffab6a;
+    --clr-orange-500: #ff7e1b;
+
+    --fs-200: 1.2rem;
+    --fs-300: 1.3rem;
+    --fs-400: 1.5rem;
+    --fs-500: 1.6rem;
+    --fs-800: 2.8rem;
+  }
+
+  :root {
+    body {
+      font-family: "Kumbh Sans", sans-serif;
+      font-size: var(--fs-500);
+      line-height: 2.6rem;
+      color: var(--clr-gray-900);
+    }
+  }
+}
