Create product-info component

--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,3 +1,8 @@
 <div class="home">
-  <app-image-selector />
+  <div class="flex-container">
+    <app-image-selector />
+    <div class="product-data">
+      <app-product-info />
+    </div>
+  </div>
 </div>
