--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,10 @@
 
   :root {
     --header-height: 6.4rem;
+
+    --font-title: var(--fs-800);
+    --font-subtitle: var(--fs-200);
+    --font-body: var(--fs-400);
   }
 
   body {
