--- a/src/app/routes/home/home.component.scss
+++ b/src/app/routes/home/home.component.scss
@@ -2,3 +2,15 @@
   display: flex;
   flex-direction: column;
 }
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-data {
+  padding: 2.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
