Make page responsive

--- a/src/app/components/image-selector/image-selector.component.html
+++ b/src/app/components/image-selector/image-selector.component.html
@@ -13,6 +13,31 @@
         <img src="/assets/images/icon-next.svg" alt="next button" />
       </span>
     </div>
-    <!-- add previews here -->
+    <div class="selector__thumbnails">
+      <div class="selector__thumbnail">
+        <img
+          src="/assets/images/image-product-1-thumbnail.jpg"
+          alt="Product 1"
+        />
+      </div>
+      <div class="selector__thumbnail">
+        <img
+          src="/assets/images/image-product-2-thumbnail.jpg"
+          alt="Product 2"
+        />
+      </div>
+      <div class="selector__thumbnail">
+        <img
+          src="/assets/images/image-product-3-thumbnail.jpg"
+          alt="Product 3"
+        />
+      </div>
+      <div class="selector__thumbnail">
+        <img
+          src="/assets/images/image-product-4-thumbnail.jpg"
+          alt="Product 4"
+        />
+      </div>
+    </div>
   </div>
 </div>
