--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -6,6 +6,13 @@
       class="header__menu-btn"
     />
     <img src="/assets/images/logo.svg" alt="Logo" class="header__logo" />
+    <ul class="header__nav">
+      <li>Collection</li>
+      <li>Men</li>
+      <li>Women</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
   </div>
   <div class="header__right">
     <img
