--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -3,6 +3,7 @@
     <app-image-selector />
     <div class="product-data">
       <app-product-info />
+      <app-product-selector />
     </div>
   </div>
 </div>
