--- a/src/app/components/image-selector/image-selector.component.scss
+++ b/src/app/components/image-selector/image-selector.component.scss
@@ -4,6 +4,7 @@
 
 .selector {
   position: relative;
+  width: 100%;
 
   &__images {
     display: flex;
@@ -15,11 +16,43 @@
       height: 30rem;
       overflow: hidden;
 
+      @media (width > 992px) {
+        height: auto;
+        aspect-ratio: 1;
+      }
+
       .selected-img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+
+        @media (width > 768px) {
+          border-radius: 1.5rem;
+        }
       }
+    }
+  }
+
+  &__thumbnails {
+    display: none;
+    gap: 1rem;
+
+    @media (width > 992px) {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  &__thumbnail {
+    height: 8.8rem;
+    width: 8.8rem;
+    border-radius: 1rem;
+    overflow: hidden;
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
     }
   }
 
