--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -9,9 +9,40 @@
     height: var(--header-height);
     padding: 2rem;
 
+    @media (width > 768px) {
+      --header-height: 11rem;
+      padding: 3rem 0;
+      margin-bottom: 4.8rem;
+      border-bottom: 1px solid var(--clr-gray-100);
+    }
+
+    @media (width > 992px) {
+      margin-bottom: 5rem;
+    }
+
     .header__left {
       display: flex;
       align-items: flex-end;
+
+      @media (width > 768px) {
+        align-items: center;
+      }
+
+      ul {
+        list-style: none;
+        display: none;
+        gap: 2.4rem;
+
+        @media (width > 992px) {
+          display: flex;
+        }
+
+        li {
+          font-size: var(--fs-300);
+          color: var(--clr-gray-500);
+          cursor: pointer;
+        }
+      }
     }
 
     .header__right {
@@ -22,9 +53,14 @@
 
     &__menu-btn {
       margin-right: 1.6rem;
+
+      @media (width > 992px) {
+        display: none;
+      }
     }
 
     &__logo {
+      margin-right: 5.6rem;
     }
 
     .avatar {
@@ -32,6 +68,12 @@
       height: 2.4rem;
       border-radius: 50%;
       margin-left: 2.4rem;
+
+      @media (width > 768px) {
+        width: 4rem;
+        height: 4rem;
+        margin-left: 3.2rem;
+      }
     }
   }
 }
