--- a/src/app/routes/home/home.component.scss
+++ b/src/app/routes/home/home.component.scss
@@ -1,11 +1,27 @@
 .home {
   display: flex;
   flex-direction: column;
+
+  @media (width > 992px) {
+    padding: 4rem;
+  }
 }
 
 .flex-container {
   display: flex;
   flex-direction: column;
+
+  @media (width > 992px) {
+    flex-direction: row;
+    align-items: center;
+    gap: clamp(80px, 12.8rem, 128px);
+
+    app-image-selector {
+      display: inline-flex;
+      flex: 1 1 50%;
+      width: 30px;
+    }
+  }
 }
 
 .product-data {
@@ -13,4 +29,15 @@
   display: flex;
   flex-direction: column;
   gap: 3.2rem;
+  margin-bottom: 7rem;
+  min-width: 35rem;
+
+  @media (width > 768px) {
+    margin-top: 4.8rem;
+    padding: 0;
+  }
+
+  @media (width > 992px) {
+    flex: 1;
+  }
 }
