--- a/src/app/components/image-selector/image-selector.component.html
+++ b/src/app/components/image-selector/image-selector.component.html
@@ -14,7 +14,7 @@
       </span>
     </div>
     <div class="selector__thumbnails">
-      <div class="selector__thumbnail">
+      <div class="selector__thumbnail selected">
         <img
           src="/assets/images/image-product-1-thumbnail.jpg"
           alt="Product 1"
