--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="home">
   <div class="flex-container">
-    <app-image-selector />
+    <div class="image-selector">
+      <app-image-selector />
+    </div>
     <div class="product-data">
       <app-product-info />
       <app-product-selector />
