--- a/src/app/routes/home/home.component.scss
+++ b/src/app/routes/home/home.component.scss
@@ -14,30 +14,32 @@
   @media (width > 992px) {
     flex-direction: row;
     align-items: center;
-    gap: clamp(80px, 12.8rem, 128px);
 
-    app-image-selector {
-      display: inline-flex;
-      flex: 1 1 50%;
-      width: 30px;
+    gap: max(2rem, min(11.2rem, 8vw));
+  }
+
+  .image-selector {
+    flex-shrink: 0;
+    @media (width > 992px) {
+      width: 42.5rem;
     }
   }
-}
 
-.product-data {
-  padding: 2.4rem;
-  display: flex;
-  flex-direction: column;
-  gap: 3.2rem;
-  margin-bottom: 7rem;
-  min-width: 35rem;
+  .product-data {
+    padding: 2.4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
+    margin-bottom: 7rem;
+    min-width: 35rem;
 
-  @media (width > 768px) {
-    margin-top: 4.8rem;
-    padding: 0;
-  }
+    @media (width > 768px) {
+      margin-top: 4.8rem;
+      padding: 0;
+    }
 
-  @media (width > 992px) {
-    flex: 1;
+    @media (width > 992px) {
+      flex: 1;
+    }
   }
 }
